[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/MovingClouds/MovingClouds.gd" type="Script" id=1]
[ext_resource path="res://Assets/MovingClouds/cloud3.png" type="Texture" id=2]
[ext_resource path="res://Assets/MovingClouds/cloud2.png" type="Texture" id=3]
[ext_resource path="res://Assets/MovingClouds/cloud1.png" type="Texture" id=4]

[node name="MovingClouds" type="Node2D"]
script = ExtResource( 1 )

[node name="cloud1" type="Sprite" parent="."]
position = Vector2( 3, 50 )
texture = ExtResource( 4 )

[node name="cloud2" type="Sprite" parent="."]
position = Vector2( 392, 111 )
texture = ExtResource( 3 )

[node name="cloud3" type="Sprite" parent="."]
position = Vector2( 0, 174 )
texture = ExtResource( 2 )
